# Botoraptor

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  README.md  code-flags.md  docker-compose.yml
.agents/reports/: plan_code-flags-fix_2026-07-16.md
chatLayerSDK_go/: botoraptor.go  go.mod
chatLayerSDK_node/: .gitignore  AGENTS.md  README.md  botoraptor.ts  chatLayerSDK.ts  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
chatLayerSDK_node/tests/: botoraptorAliases.test.ts  setup.test.ts
chatLayerSDK_node/tests/mocks/: fetchMock.test.ts  fetchMock.ts
chatLayerSDK_php/: Botoraptor.php
chatLayerSDK_python/: .gitignore  AGENTS.md  LICENSE  README.md  example.py  main.py  pyproject.toml  quickstart.py
chatLayerSDK_python/botoraptor_sdk/: __init__.py  client.py  models.py
chatLayerSDK_python/chatlayer_sdk/: __init__.py  client.py  models.py
chatLayerSDK_python/tests/: __init__.py  test_models.py
docs/: INDEX.md  arch_index.md  arch_sdk-go.md  arch_sdk-node.md  arch_sdk-php.md  arch_sdk-python.md  arch_server.md  arch_web-ui.md  log.md  ontology.md  product.md
docs/archive/: INDEX.md
docs/archive/2026-07-16-flat-structure/: INDEX.md  arch_index.md  arch_sdk-go.md  arch_sdk-node.md  arch_sdk-php.md  arch_sdk-python.md  arch_server.md  arch_web-ui.md  product.md
docs/core/: INDEX.md  server.md  web-ui.md
docs/nsdks/: INDEX.md  go.md  node.md  php.md  python.md
docs/overview/: INDEX.md  product.md
server/: .dockerignore  .env.example  .gitignore  AGENTS.md  DOCKER.md  Dockerfile  README.md  ecosystem.config.cjs  package.json  pnpm-lock.yaml  prisma.config.ts  run-tsx-test.bat  tsconfig.json
server/config/: client.json  server.json
server/docs/: API_STRUCTURE.md  ARCH.md  ARCH_long-polling.md  ARCH_webhooks.md  CONFIGURATION.md  DATABASE_FLOW.md  DATABASE_SETUP.md  DATA_MODELS.md  DOCKER_IMPLEMENTATION.md  FILE_HANDLING.md  LONG_POLLING.md  WEBHOOKS.md
server/prisma/: schema.prisma  seed.ts
server/scripts/: testLongpoll.js
server/src/: index.ts  prismaClient.ts  swagger.ts
server/src/controllers/: messageController.ts
server/src/helpers/: logpollManager.ts  ssrfProtection.ts
server/tests/: README.md  run-tests.ts  server.test.ts  test-prisma.ts
web_ui/: .dockerignore  README.md  index.html  ionic.config.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web_ui/docs/: ARCH.md  deeplinking.md
web_ui/src/: App.vue  i18n.ts  main.ts
web_ui/src/components/: AuthModal.vue  ChatList.vue  ChatView.vue  LanguagePicker.vue  SettingsModal.vue
web_ui/src/helpers/: notificationManager.ts
web_ui/src/locales/: ar.json  en.json  es.json  fr.json  ja.json  pt.json  ru.json  zh.json
web_ui/src/router/: index.ts
web_ui/src/services/: api.ts
web_ui/src/stores/: uiStore.ts
web_ui/src/utils/: hashParser.ts
web_ui/src/views/: HomePage.vue
web_ui/tests/: deeplinking.test.js
